@@ -1,5 +1,8 @@
 2011-03-04  Michael Snyder  <msnyder@vmware.com>
 
+	* symfile.c (simple_overlay_update): Check for null return value
+	from lookup_minimal_symbol.
+
 	* gdbserver/server.c (queue_stop_reply): Call xmalloc not malloc.
 
 	* xml-syscall.c (syscall_start_syscall): Assert name is non null.
